<resources>
    <string name="app_name">Practica_Exa_1</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Clave</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_exam">Practica</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>



    <string name="msg_nombre">Nombre</string>
    <string name="msg_capital">Capital</string>
    <string name="msg_poblacion">Poblacion</string>
    <string name="msg_abreviatura">Abreviatura</string>
    <string name="bt_add">Agregar</string>
    <string name="msg_added">Agregado</string>
    <string name="msg_data">Faltan Datos</string>

    <string name="bt_update">Actualizar</string>
    <string name="msg_updated">Actualizado </string>

    <string name="bt_delete">Eliminar </string>
    <string name="msg_deleted">Eliminado</string>
    <string name="msg_pregunta_deleted">Esta seguro de eliminar </string>
    <string name="msg_si_deleted">Si</string>
    <string name="msg_no_deleted">No</string>
</resources>